Bug Fixes for Landing Page, Customer Page and Layouts readability Improved

--- a/webroot/landing-detail/css/styles.css
+++ b/webroot/landing-detail/css/styles.css
@@ -10999,3 +10999,19 @@ header.masthead h1, header.masthead .h1 {
 #mainNav .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.7%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
 }
+
+/* Custom CSS Animations */
+.fade-in-title {
+    opacity: 0;
+    animation: fadeIn 1s ease-in forwards;
+}
+
+.fade-in-para {
+    opacity: 0;
+    animation: fadeIn 2s ease-in forwards;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+}
